# FileChecker

./: README.md  filecheck.h  filecheck.vapi  meson.build  org.gnome.filechecker.json
data/: meson.build  org.gnome.filechecker.desktop.in  org.gnome.filechecker.gschema.xml  org.gnome.filechecker.metainfo.xml.in  org.gnome.filechecker.service.in
data/icons/: meson.build
lib/: filecheck.c  filecheck.vala  note about this vala file.txt
po/: POTFILES.in  meson.build
src/: application.vala  detail_window.ui  detail_window.vala  filechecker.gresource.xml  main.vala  meson.build  window (Копия).ui  window (Копия).vala  window.ui  window.vala
src/css/: style.css
vapi/: filecheck.vapi
